# CrossFile

./: .gitignore  CMakeLists.txt  README.md  grammar.js
Assets/Files/FontFiles/monospace-font/: info.txt
CMake/: TreeSitterMakeAvailable.cmake  TreeSitterXfileGenerate.cmake
Data/: Elf.xf  grammar.js  xf_grammar.js
Data/Elf/: Elf.h  Elf.xf
Include/Anvie/: Common.h  Types.h
Include/Anvie/CrossFile/: EndiannessHelpers.h  File.h  Stream.h  Struct.h  Xft.h
Include/Anvie/CrossFile/Otf/: Otf.h  Tables.h
Include/Anvie/CrossFile/Otf/Tables/: CharToGlyphIndexMap.h  Cmap.h  Common.h  Head.h  Hhea.h  Hmtx.h  IndexToLocation.h  Loca.h  MaxProfile.h  Maxp.h  Name.h  Os2.h
Include/Anvie/CrossFile/Utils/: List.h  Tree.h  Vec.h
Notes/: StructureAssembly.md  XftVm.md
Source/: CMakeLists.txt  Main.c
Source/CrossFile/: CMakeLists.txt  File.c  Struct.c
Source/CrossFile/OTF/: Otf.c  Tables.c
Source/CrossFile/OTF/Tables/: CharToGlyphIndexMap.c  Cmap.c  Head.c  IndexToLocation.c  Loca.c  MaxProfile.c  Maxp.c
Source/CrossFile/Otf/: Otf.c  Tables.c
Source/CrossFile/Otf/Tables/: Cmap.c  Common.c  Head.c  Hhea.c  Hmtx.c  Name.c  Os2.c
Source/CrossFile/Stream/: ByteStream.c  CMakeLists.txt  File.c  FileStream.c  RawData.c  Stream.c  Stream.h
Source/CrossFile/Utils/: Tree.c
Source/CrossFile/Xft/: FileLoader.h  Insn.h  InsnBuilders.h  TypeLoader.h  TypeLoaderStack.c  TypeLoaderStack.h  Vm.c  Vm.h
Source/CrossFile/Xft/Parser/: Field.c  Field.h
Source/CrossFile/Xft/Vm/: Loader.h  Stack.c  Stack.h  Vm.c  Vm.h
Source/Stasm/: CMakeLists.txt  Stasm.c
StructDesc/: otf.stasm
Test/XfileParser/: enum_decl  struct_decl
